<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">i*de*a</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Don\'t have an account? Sign up</string>
    <string name="btn_link_to_login">Already registered. Login me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_signup">SignupActivity</string>


    <!--strings for fragments, toolbar, and navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_about">About</string>
    <string name="nav_kitchen">Kitchen</string>
    <string name="nav_bathroom">Bathroom</string>
    <string name="nav_livingroom">Livingroom</string>
    <string name="nav_bedroom">Bedroom</string>
    <string name="nav_interior">Interior</string>
    <string name="nav_landscape">Landscape</string>
    <string name="nav_architecture">Architecturee</string>
    <string name="nav_design">Design</string>
    <string name="nav_open_drawer">Open Drawer</string>
    <string name="nav_close_drawer">Close Drawer</string>
    <string name="app_bar_settings">Settings</string>
    <string name="app_bar_share">Share</string>
    <string name="fragment_home">Home Fragment</string>
    <string name="fragment_about">About Fragment</string>
    <string name="fragment_home_next">Next Fragment</string>
    <string name="change_password">Submit</string>
    <string name="login">Login</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_old_password">Current Password</string>
    <string name="wrong_password">Current password is incorrect.</string>
    <string name="no_submissions">No Submissions</string>

</resources>