<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.idea.UploadActivity">
    <include
        layout="@layout/app_bar"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_marginTop="61dp"
        android:gravity="center"
        android:text="I*de*a Image Upload"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ShowImageView"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/textview"
        android:layout_marginTop="61dp" />

    <Button
        android:id="@+id/ButtonChooseImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="408dp"
        android:text="Choose Image" />

    <Button
        android:id="@+id/ButtonUploadImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_alignTop="@+id/toolbar"
        android:layout_alignParentStart="true"

        android:layout_marginStart="0dp"
        android:layout_marginTop="462dp"
        android:text="Upload image" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/uploadSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_alignTop="@+id/textview"


        android:layout_marginTop="34dp"

        android:textColor="@color/cardview_dark_background"
        android:textSize="20sp" />


</RelativeLayout>